fixed nav bar color spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,31 +2,32 @@ body {
   display: grid;
   grid-template-columns:  50% auto;
   grid-template-rows: 10% 20% auto;
-  grid-template-areas: "nav-left search-style"
+  /* grid-template-areas: "nav-left nav-left"
   "section section "
-  "main main ";
+  "main main "; */
 }
 
 nav {
   display: grid;
   background-color: #524649;
+  grid-area: 1/ 1 / 2 / 3;
 }
 
 .search-style {
-  grid-area: search-style;
-  height: 150px;
+  height: 20px;
   width: 200px
 }
 
 .nav-left {
-  grid-area: nav-left;
   width: 80%;
 }
 
 section {
-  grid-area: section;
+  display: grid;
+  grid-area: 2/ 1 / 3 / 3;
 }
 
 main {
-  grid-area: main;
+  display: grid;
+  grid-area: 3/ 1 / 4 / 3;
 }
